changement de text

--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Guardian</title>
+    <title>Notre équipe de Guardian</title>
     <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
-<p> dfsdfsdfsdfs</p>
+<p>tache a faire</p>
+
+
 </body>
 
 
