--- a/index.html
+++ b/index.html
@@ -5,8 +5,57 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Guardian</title>
     <link rel="stylesheet" href="style/style.css">
+    <script src="https://kit.fontawesome.com/773700857c.js" crossorigin="anonymous"></script>
 </head>
 <body>
+
+    <section class="header">
+
+        <h1>CyberFolio</h1>
+
+        <nav>
+
+            <a class="nav-button selected">
+                Home
+            </a>
+
+            <a class="nav-button" href="#home">
+                About
+            </a>
+
+            <a class="nav-button" href="#collaborator">
+                Collaborator
+            </a>
+            
+        </nav>
+
+    </section>
+
+    <section class="home" id="home">
+        <div class="home-right">
+            <img src="assets/logo.png" alt="CyberFolioLogo">
+            <h1>CyberFolio</h1>
+            <p>Make a new universe to cyber</p>
+            <button>About this project</button>
+        </div>
+        <div class="home-left">
+            
+            <h1>CyberFolio</h1>
+            <p>Make a new universe to cyber</p>
+            <button>About this project</button>
+        </div>
+    </section>
+
+    <section class="about" id="about">
+        <h6></h6>
+        <div class="content">
+            <h1>Cybersecurity student at Guardia</h1>
+        </div>
+
+        <div class="content">
+            <h1>Cybersecurity student at Guardia</h1>
+        </div>
+    </section>
 
 
 
