--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 About
             </a>
 
-            <a class="nav-button" href="#collaborator">
+            <a class="nav-button" href="collaborators.html">
                 Collaborator
             </a>
             
