page collab modif

--- a/collaborators.html
+++ b/collaborators.html
@@ -36,10 +36,13 @@
             <section class="photo">
                 <div class="photo-gauche">
                     <img src="image collaborateurs/FOREST Mathieu -1.jpg">
-                    <h1></h1>
+                    <h1>FOREST Mathieu</h1>
+                    <p>1st Year Cybersecurity student</p>
                 </div>
                 <div class="photo-droite">
                     <img src="image collaborateurs/Taha.jpg">
+                    <h1> CHAUDHRY Taha</h1>
+                    <p>1st Year Cybersecurity student</p>
                 </div>
             </section>
 
@@ -48,10 +51,13 @@
                 <section class="photo">
                     <div class="photo-gauche">
                         <img src="image collaborateurs/BRÉHIN Eliott -2.jpg">
-
+                        <h1>BREHIN Eliott</h1>
+                        <p>1st Year Cybersecurity student</p>
                     </div>
                     <div class="photo-droite">
                         <img src="image collaborateurs/GÉRARD Maxime -1.jpg">
+                        <h1> GERARD Maxime</h1>
+                        <p>1st Year Cybersecurity student</p>
                     </div>
                 </section>
             </section>  
