--- a/CV_Maxime.html/cv_maxime.html
+++ b/CV_Maxime.html/cv_maxime.html
@@ -41,6 +41,12 @@
             <li>OSINT</li>
         </ul>
     </div>
+    <h2>Diplomes</h2>
+    <p>Baccalauréat général spécialité Maths et NSI : 2021-2024</p>
+    <h2>Centre d'interet personnel</h2>
+    <h2>Un peu plus sur moi</h2>
+    <p>Je souhaite, a terme de mes 5 années d'études, de continuer ma voie professionnel dans la branche de cybersécurité. Pour ça, je souhaite continuer a progresser jusqu'à devenir un expert en cybersécurité et connaître la cybersécurité le plus profondément possible.</p>
+
 </body>
 
 
