--- a/cv code/CV Maxime.html
+++ b/cv code/CV Maxime.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Karthik SR - UX/UI Designer</title>
+  <title>GERARD Maxime - UX/UI Designer</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
