changement cv maxime

--- a/cv code/CV Maxime.html
+++ b/cv code/CV Maxime.html
@@ -28,7 +28,7 @@
             <h3>Pharmacie</h3>
             <p>Employé en pharmacie: mai - juin 2021</p>
             <ul>
-              <li>Relation client</li>
+              <li>Business to Custommers</li>
               <li>Restockage de la réserve</li>
             </ul>
           </div>
@@ -36,7 +36,8 @@
         <section class="education">
           <h2>Education</h2>
           <ul>
-            <li>2021 - 2024 - Baccalauréat général</li>
+            <li>2021 - 2024 - Baccalauréat général (Saint pierre channel)</li>
+            <li>2024 - Bachelort en cybersécurité (Guardiaschool)</li>
           </ul>
         </section>
       </div>
