cv final maxime

--- a/cv code/CV Maxime.html
+++ b/cv code/CV Maxime.html
@@ -3,17 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>GERARD Maxime - UX/UI Designer</title>
+  <title>GERARD Maxime - Student in Cybersecurity</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="resume">
     <header>
       <div class="profile">
-        <img src="GÉRARD Maxime -1.jpg" alt="Karthik SR" class="profile-pic">
+        <img src="GÉRARD Maxime -1.jpg" alt="GERARD Maxime" class="profile-pic">
         <div>
           <h1>GERARD Maxime</h1>
-          <p>UX/UI Designer</p>
+          <p>Student in Cybersecurity</p>
         </div>
       </div>
     </header>
