--- a/index.html
+++ b/index.html
@@ -29,34 +29,60 @@
             
         </nav>
 
+        <div class="socials">
+            <a href="#"><i class="fa-brands fa-github"></i></a>
+            <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+            <a><img src="assets/flag_france.png" id="french" alt="French Flag"/></a>
+            <a><img src="assets/flag_usa.png" id="usa" alt="USA Flag"/></a>
+        </div>
+
     </section>
 
     <section class="home" id="home">
-        <div class="home-right">
+        <div class="home-left">
             <img src="assets/logo.png" alt="CyberFolioLogo">
-            <h1>CyberFolio</h1>
-            <p>Make a new universe to cyber</p>
+            <h6>CyberFolio of Cybernova</h6>
+            <p>"Illuminating the Future of Technology and Security"</p>
             <button>About this project</button>
         </div>
-        <div class="home-left">
-            
-            <h1>CyberFolio</h1>
-            <p>Make a new universe to cyber</p>
-            <button>About this project</button>
+        <div class="home-right">
+            <img src="assets/globe.png" alt="globe">
+            <h6>Works of the cybersecurity</h6>
+            <p>Explore the digital showcase of our team’s creativity, innovation, and collaboration.</p>
+            <button>Collaborator</button>
         </div>
     </section>
 
     <section class="about" id="about">
-        <h6></h6>
-        <div class="content">
-            <h1>Cybersecurity student at Guardia</h1>
+        <div class="about-title-container">
+            <h1 class="about-title">About this compagny.</h1> <h1>The perfection !</h1>
         </div>
 
-        <div class="content">
-            <h1>Cybersecurity student at Guardia</h1>
+
+        <div class="about-container">
+            <div class="container-items">
+                <div class="container-items-title">
+                    <h1 class="title">French teams.</h1>
+                    <h1 class="subtitle">Based In Lyon !</h1>
+                </div>
+                <img src="assets/content_flag.png" alt="content_flag"/>
+            </div>
+            <div class="container-items">
+                <div class="container-items-title">
+                    <h1 class="title">UI/UX Designer.</h1>
+                    <h1 class="subtitle">Student</h1>
+                </div>
+                <img src="assets/content_design.png" alt="content_flag"/>
+            </div>
+            <div class="container-items">
+                <div class="container-items-title">
+                    <h1 class="title">Full Stack Web.</h1>
+                    <h1 class="subtitle">Project</h1>
+                </div>
+                <img src="assets/content_full.png" alt="content_flag"/>
+            </div>
         </div>
     </section>
-
 
 
 </body>
