--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
             <img src="assets/logo.png" alt="CyberFolioLogo">
             <h6>CyberFolio of Cybernova</h6>
             <p>"Illuminating the Future of Technology and Security"</p>
-            <button>About this project</button>
+            <a href="#"> About this project</a>
         </div>
         <div class="home-right">
             <img src="assets/globe.png" alt="globe">
             <h6>Works of the cybersecurity</h6>
             <p>Explore the digital showcase of our team’s creativity, innovation, and collaboration.</p>
-            <button>Collaborator</button>
+            <a href="collaborators.html">Collaborator</a>
         </div>
     </section>
 
