--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 
         <nav>
 
-            <a class="nav-button selected">
+            <a class="nav-button selected" href="#home">
                 Home
             </a>
 
-            <a class="nav-button" href="#home">
+            <a class="nav-button" href="#about">
                 About
             </a>
 
@@ -32,30 +32,30 @@
         <div class="socials">
             <a href="#"><i class="fa-brands fa-github"></i></a>
             <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-            <a><img src="assets/flag_france.png" id="french" alt="French Flag"/></a>
-            <a><img src="assets/flag_usa.png" id="usa" alt="USA Flag"/></a>
+            <a><img src="assets/flag_france.png" id="french" alt="French Flag" draggable="false"/></a>
+            <a><img src="assets/flag_usa.png" id="usa" alt="USA Flag" draggable="false"/></a>
         </div>
 
     </section>
 
     <section class="home" id="home">
         <div class="home-left">
-            <img src="assets/logo.png" alt="CyberFolioLogo">
+            <img src="assets/logo.png" alt="CyberFolioLogo" draggable="false">
             <h6>CyberFolio of Cybernova</h6>
             <p>"Illuminating the Future of Technology and Security"</p>
-            <button>About this project</button>
+            <a href="#">About this project</a>
         </div>
         <div class="home-right">
-            <img src="assets/globe.png" alt="globe">
+            <img src="assets/globe.png" alt="globe" draggable="false">
             <h6>Works of the cybersecurity</h6>
             <p>Explore the digital showcase of our team’s creativity, innovation, and collaboration.</p>
-            <button>Collaborator</button>
+            <a href="#">Collaborator</a>
         </div>
     </section>
 
     <section class="about" id="about">
         <div class="about-title-container">
-            <h1 class="about-title">About this compagny.</h1> <h1>The perfection !</h1>
+            <h1 class="about-title">About this compagny.</h1> <h1 class="about-subtitle">The perfection !</h1>
         </div>
 
 
@@ -65,25 +65,50 @@
                     <h1 class="title">French teams.</h1>
                     <h1 class="subtitle">Based In Lyon !</h1>
                 </div>
-                <img src="assets/content_flag.png" alt="content_flag"/>
+                <img src="assets/content_flag.png" alt="content_flag" draggable="false"/>
             </div>
             <div class="container-items">
                 <div class="container-items-title">
                     <h1 class="title">UI/UX Designer.</h1>
                     <h1 class="subtitle">Student</h1>
                 </div>
-                <img src="assets/content_design.png" alt="content_flag"/>
+                <img src="assets/content_design.png" alt="content_flag" draggable="false"/>
             </div>
             <div class="container-items">
                 <div class="container-items-title">
                     <h1 class="title">Full Stack Web.</h1>
                     <h1 class="subtitle">Project</h1>
                 </div>
-                <img src="assets/content_full.png" alt="content_flag"/>
+                <img src="assets/content_full.png" alt="content_flag" draggable="false"/>
+            </div>
+        </div>
+
+        <div class="about-container">
+            <div class="container-items">
+                <div class="container-items-title">
+                    <h1 class="title">Available.</h1>
+                    <h1 class="subtitle">For a good communication !</h1>
+                </div>
+                <img src="assets/content_timer.png" alt="content_flag" draggable="false"/>
+            </div>
+            <div class="container-items">
+                <div class="container-items-title">
+                    <h1 class="title">Cybersecurity investisment.</h1>
+                    <h1 class="subtitle">The future of world works</h1>
+                </div>
+                <img src="assets/content_cyber.png" alt="content_flag" draggable="false"/>
             </div>
         </div>
     </section>
+    
+    <section class="collaborator" id="collaborator">
+        <div class="collaborator-title-container">
+            <h1 class="collaborator-title">All collaboration.</h1>
+            <h1 class="collaborator-subtitle">The best !</h1>
+        </div>
 
+
+    </section>
 
 </body>
 
