--- a/CV/CV Maxime.html
+++ b/CV/CV Maxime.html
@@ -39,6 +39,11 @@
             <li>2021 - 2024 - Baccalauréat général (Saint pierre channel)</li>
             <li>2024 - Bachelort en cybersécurité (Guardiaschool)</li>
           </ul>
+          </section>
+          <section class="Qui ?">
+            <h2>Qui suis je ?</h2>
+            <p>Je m'appele Maxime habitant à Lyon 7ème j'étudie aujourd'hui a guardiaschool en 1ère année pour approfondir mes connaissances. Je souhaite faire de cette branche mon métier professionel.</p>
+            <p>Pour y arriver le travail est la clé, c'est pour ça que je crée un cv sur ce site pour potentiellement trouver un stage ou une alternance. Si vous êtes intéréssé contacter moi aux réseaux ci joint.</p>
         </section>
       </div>
 
