--- a/CV/Eliott_CV.html
+++ b/CV/Eliott_CV.html
@@ -50,6 +50,13 @@
             
           </ul>
         </section>
+        <section class="Qui ?">
+          <h2>Qui suis je ?</h2>
+          <p>....</p>
+          <p>.....</p>
+      </section>
+          
+        </section>
       </div>
 
       <!-- Colonne droite : Languages, Tools et Interests -->
