--- a/CV/CV Mathieu.html
+++ b/CV/CV Mathieu.html
@@ -3,16 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>GERARD Maxime - Student in Cybersecurity</title>
+  <title>FOREST Mathieu - Student in Cybersecurity</title>
   <link rel="stylesheet" href="../style/styleCv.css">
 </head>
 <body>
   <div class="resume">
     <header>
       <div class="profile">
-        <img src="../assets/collaborator/maxime.jpg" alt="GERARD Maxime" class="profile-pic">
+        <img src="../assets/collaborator/mathieu.jpg" alt="GERARD Maxime" class="profile-pic">
         <div>
-          <h1>GERARD Maxime</h1>
+          <h1>FOREST Mathieu</h1>
           <p>Student in Cybersecurity</p>
         </div>
       </div>
@@ -24,36 +24,56 @@
       <div class="left-column">
         <section class="Qui ?">
           <h2>Qui suis je ?</h2>
-          <p>Je m'appele Maxime habitant à Lyon 7ème j'étudie aujourd'hui a guardiaschool en 1ère année pour approfondir mes connaissances. Je souhaite faire de cette branche mon métier professionel.</p>
-          <p>Pour y arriver le travail est la clé, c'est pour ça que je crée un cv sur ce site pour potentiellement trouver un stage ou une alternance. Si vous êtes intéréssé contacter moi aux réseaux ci joint.</p>
+          <p>J....</p>
+          <p>....</p>
       </section>
         <section class="experience">
           <h2>Experience</h2>
           <div class="job">
-            <h3>Pharmacie</h3>
-            <p>Employé en pharmacie: mai - juin 2021</p>
+            <h3>Freelance - Développement</h3>
+            <p>2021 - actuellement</p>
             <ul>
-              <li>Business to Custommers</li>
-              <li>Restockage de la réserve</li>
+              <li>Développement web</li>
+              <li>Développement dans le language LUA, JS, TS</li>
+              <li>Conception Web</li>
+            </ul>
+          </div>
+          <div class="job">
+            <h3>Vente et commercialisation</h3>
+            <p>Juillet - Aout 2023</p>
+            <ul>
+              <li>Vente</li>
+              <li>Méthode de commercialisation</li>
+            </ul>
+          </div>
+          <div class="job">
+            <h3>Service en restauration polyvalant</h3>
+            <p>Novembre - Décembre 2022</p>
+            <ul>
+              <li>Service client</li>
+              <li>Analyse des besoins</li>
+              <li>Gérer les besoins d'un client</li>
             </ul>
           </div>
         </section>
-        <section class="education">
-          <h2>Education</h2>
-          <ul>
-            <li>2021 - 2024 - Baccalauréat général (Saint pierre channel)</li>
-            <li>2024 - Bachelort en cybersécurité (Guardiaschool)</li>
-          </ul>
-          </section>
+        
           
       </div>
 
       <!-- Colonne droite : Languages, Tools et Interests -->
       <div class="right-column">
+        <section class="education">
+            <h2>Education</h2>
+            <ul>
+              <li>2024 - 2029 - Guardia Cybersecurity MsC</li>
+              <li>2021 - 2024 - Jehanne de France - Bac STHR</li>
+            </ul>
+            </section>
         <section class="languages">
           <h2>Languages</h2>
           <ul>
-            <li>English <span class="bar"><span style="width: 65%"></span></span></li>
+            <li>Italien <span class="bar"><span style="width: 20%"></span></span></li>
+            <li>English <span class="bar"><span style="width: 30%"></span></span></li>
             <li>Francais <span class="bar"><span style="width: 100%"></span></span></li>
           </ul>
         </section>
