--- a/CV/CV Taha.html
+++ b/CV/CV Taha.html
@@ -3,16 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>GERARD Maxime - Student in Cybersecurity</title>
+  <title>Chaudhry Taha - Student in Cybersecurity</title>
   <link rel="stylesheet" href="../style/styleCv.css">
 </head>
 <body>
   <div class="resume">
     <header>
       <div class="profile">
-        <img src="../assets/collaborator/maxime.jpg" alt="GERARD Maxime" class="profile-pic">
+        <img src="../assets/collaborator/taha.jpg" alt="Chaudhry Taha " class="profile-pic">
         <div>
-          <h1>GERARD Maxime</h1>
+          <h1>Chaudhry Taha</h1>
           <p>Student in Cybersecurity</p>
         </div>
       </div>
@@ -24,8 +24,8 @@
       <div class="left-column">
         <section class="Qui ?">
           <h2>Qui suis je ?</h2>
-          <p>Je m'appele Maxime habitant à Lyon 7ème j'étudie aujourd'hui a guardiaschool en 1ère année pour approfondir mes connaissances. Je souhaite faire de cette branche mon métier professionel.</p>
-          <p>Pour y arriver le travail est la clé, c'est pour ça que je crée un cv sur ce site pour potentiellement trouver un stage ou une alternance. Si vous êtes intéréssé contacter moi aux réseaux ci joint.</p>
+          <p>...</p>
+          <p>...</p>
       </section>
         <section class="experience">
           <h2>Experience</h2>
@@ -74,7 +74,7 @@
 
     <footer>
       <p>Let’s chat! I’m ready to work on exciting projects.</p>
-      <p>Email: <a href="mailto.mgerard@guardiaschool.fr">mgerard@guardiaschool.fr</a></p>
+      <p>Email: <a href="mailto.tchaudhry@guardiaschool.fr">tchaudhry@guardiaschool.fr</a></p>
     </footer>
   </div>
 </body>
