--- a/CV/index_cv.html
+++ b/CV/index_cv.html
@@ -22,6 +22,11 @@
     <main>
       <!-- Colonne gauche : Experience et Education -->
       <div class="left-column">
+        <section class="Qui ?">
+          <h2>Qui suis je ?</h2>
+          <p>....</p>
+          <p>.....</p>
+        </section>
         <section class="experience">
           <h2>Experience</h2>
           <div class="job">
