--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
         <div class="socials">
             <a href="#"><i class="fa-brands fa-github"></i></a>
             <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-            <a><img src="assets/flag_france.png" id="french" alt="French Flag" draggable="false"/></a>
-            <a><img src="assets/flag_usa.png" id="usa" alt="USA Flag" draggable="false"/></a>
+            <a id="dark-mode"><i class="fa-solid fa-circle-half-stroke"></i></a>
         </div>
 
     </section>
