ajout contact us

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             <a class="nav-button" href="#collaborator">
                 Collaborator
             </a>
+            <a class="nav-button" href="#">Contact us !</a>
 
             <a class="nav-button login">Sign In/Sign Out</a>
             
@@ -154,6 +155,7 @@
                 <a href="#home" class="subtitle">Home</a>
                 <a href="#about" class="subtitle">About</a>
                 <a href="#collaborator" class="subtitle">Collaborator</a>
+                <a href="#" class="subtitle">Contact us ! </a>
             </div>
         </div>
     </footer>
