--- a/CV/CV Mathieu.html
+++ b/CV/CV Mathieu.html
@@ -94,7 +94,7 @@
 
     <footer>
       <p>Let’s chat! I’m ready to work on exciting projects.</p>
-      <p>Email: <a href="mailto.mgerard@guardiaschool.fr">mgerard@guardiaschool.fr</a></p>
+      <p>Email: <a href="mailto.mforest@guardiaschool.fr">mforest@guardiaschool.fr</a></p>
     </footer>
   </div>
 </body>
