--- a/CV/CV Mathieu.html
+++ b/CV/CV Mathieu.html
@@ -3,10 +3,42 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>FOREST Mathieu - Student in Cybersecurity</title>
   <link rel="stylesheet" href="../style/styleCv.css">
+  <link rel="stylesheet" href="../style/style.css">
+  <title>FOREST Mathieu - Student in Cybersecurity</title>
+  
 </head>
 <body>
+  <section class="header">
+
+    <h1>Cybernova</h1>
+
+    <nav>
+
+        <a class="nav-button selected" href="#home">
+            Home
+        </a>
+
+        <a class="nav-button" href="#about">
+            About
+        </a>
+
+        <a class="nav-button" href="#collaborator">
+            Collaborator
+        </a>
+        <a class="nav-button" href="#">Contact us !</a>
+
+        <a class="nav-button login">Sign In/Sign Out</a>
+        
+    </nav>
+
+    <div class="socials">
+        <a href="#"><i class="fa-brands fa-github"></i></a>
+        <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+        <a id="dark-mode"><i class="fa-solid fa-circle-half-stroke"></i></a>
+    </div>
+
+</section>
   <div class="resume">
     <header>
       <div class="profile">
