--- a/CV/CV Maxime.html
+++ b/CV/CV Maxime.html
@@ -16,15 +16,15 @@
 
     <nav>
 
-        <a class="nav-button selected" href="#home">
+        <a class="nav-button selected" href="../index.html">
             Home
         </a>
 
-        <a class="nav-button" href="#about">
+        <a class="nav-button" href="../index.html#about">
             About
         </a>
 
-        <a class="nav-button" href="#collaborator">
+        <a class="nav-button" href="../index.html#collaborator">
             Collaborator
         </a>
         <a class="nav-button" href="#">Contact us !</a>
