--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
             <a class="nav-button" href="#collaborator">
                 Collaborator
             </a>
-            <a class="nav-button" href="#">Contact us !</a>
+            <a class="nav-button" href="Contact/Contact index.php">Contact us !</a>
 
-            <a class="nav-button login">Sign In/Sign Out</a>
+            <a class="nav-button login" href="SignUp.php">Sign In/Sign Out</a>
             
         </nav>
 
