link cv + contact sur index

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 Collaborator
             </a>
 
-            <a class="nav-button" href="contact.html">
+            <a class="nav-button" href="back-end/contact.php">
                 Contact
             </a>
 
