--- a/CV/CV Maxime.html
+++ b/CV/CV Maxime.html
@@ -34,8 +34,8 @@
     </nav>
 
     <div class="socials">
-        <a href="#"><i class="fa-brands fa-github"></i></a>
-        <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+        <a href="https://github.com/BapeCode/Guardian"><i class="fa-brands fa-github"></i></a>
+        <a href="https://www.linkedin.com/search/results/all/?fetchDeterministicClustersOnly=true&heroEntityKey=urn%3Ali%3Afsd_profile%3AACoAAFSjLYMBEnzFe48ADG2sucqHpp0ltECn42A&keywords=maxime%20gerard&origin=RICH_QUERY_SUGGESTION&position=0&searchId=0e813d14-de71-47c0-b24e-684f383f8d99&sid=KRC&spellCorrectionEnabled=false"><i class="fa-brands fa-linkedin"></i></a>
         <a id="dark-mode"><i class="fa-solid fa-circle-half-stroke"></i></a>
     </div>
 
