--- a/CV/CV Eliott.html
+++ b/CV/CV Eliott.html
@@ -32,8 +32,8 @@
     </nav>
 
     <div class="socials">
-        <a href="#"><i class="fa-brands fa-github"></i></a>
-        <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+        <a href="https://github.com/BapeCode/Guardian"><i class="fa-brands fa-github"></i></a>
+        <a href="https://www.linkedin.com/search/results/all/?fetchDeterministicClustersOnly=true&heroEntityKey=urn%3Ali%3Afsd_profile%3AACoAAFNbc_4BWtjoK3PrDvEXytv0V3_hZwlUO2o&keywords=eliott%20brehin&origin=RICH_QUERY_SUGGESTION&position=0&searchId=66b46d23-5876-436b-9fcf-53c3ed844d45&sid=%409%2C&spellCorrectionEnabled=false"><i class="fa-brands fa-linkedin"></i></a>
         <a id="dark-mode"><i class="fa-solid fa-circle-half-stroke"></i></a>
     </div>
 
