--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="style/style.css">
     <script src="https://kit.fontawesome.com/773700857c.js" crossorigin="anonymous"></script>
 </head>
-<body>
+
+<body class="light-mode">
   
     <!DOCTYPE html>
 <html lang="en">
