--- a/CV/mathieu.html
+++ b/CV/mathieu.html
@@ -3,42 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../style/styleCv.css">
-  <link rel="stylesheet" href="../style/style.css">
   <title>FOREST Mathieu - Student in Cybersecurity</title>
-  
+  <link rel="stylesheet" href="../style/styleCv.css">
 </head>
 <body>
-  <section class="header">
-
-    <h1>Cybernova</h1>
-
-    <nav>
-
-        <a class="nav-button selected" href="../index.html">
-            Home
-        </a>
-
-        <a class="nav-button" href="../index.html#about">
-            About
-        </a>
-
-        <a class="nav-button" href="#../index.html#collaborator">
-            Collaborator
-        </a>
-        <a class="nav-button" href="#">Contact us !</a>
-
-        <a class="nav-button login">Sign In/Sign Out</a>
-        
-    </nav>
-
-    <div class="socials">
-        <a href="#"><i class="fa-brands fa-github"></i></a>
-        <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-        <a id="dark-mode"><i class="fa-solid fa-circle-half-stroke"></i></a>
-    </div>
-
-</section>
   <div class="resume">
     <header>
       <div class="profile">
@@ -126,7 +94,7 @@
 
     <footer>
       <p>Let’s chat! I’m ready to work on exciting projects.</p>
-      <p>Email: <a href="mailto.mforest@guardiaschool.fr">mforest@guardiaschool.fr</a></p>
+      <p>Email: <a href="mailto.mgerard@guardiaschool.fr">mgerard@guardiaschool.fr</a></p>
     </footer>
   </div>
 </body>
