--- a/CV/Eliott_CV.html
+++ b/CV/Eliott_CV.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Eliott Bréhin - Cybersecurity Student</title>
   <link rel="stylesheet" href="../style/styleCv.css">
+  <link rel="stylesheet" href="../style/style.css">
+  <link rel="stylesheet" href="../style/respensive.css">
 </head>
 <body>
   <section class="header" id="header">
@@ -14,23 +16,17 @@
     </div>
 
     <div class="nav">
-        <a class="nav-button selected" href="index.html">
-            Home
-        </a>
+      <a class="nav-button selected" href="../index.html">
+          Home
+      </a>
 
-        <a class="nav-button" href="#about">
-            About
-        </a>
+      <a class="nav-button" href="../index.html#about">
+          About
+      </a>
 
-        <a class="nav-button" href="#collaborator">
-            Collaborator
-        </a>
-        <a class="nav-button" href="back-end/SignUp.php"> 
-            SignUp
-        </a>
-        <a class="nav-button" href="back-end/SignIn.php"> 
-            SignIn
-        </a>
+      <a class="nav-button" href="../index.html#collaborator">
+          Collaborator
+        
         
 
         <a id="search"><i class="fa-solid fa-magnifying-glass"></i></a>
