texte cv eliott

--- a/CV/Eliott_CV.html
+++ b/CV/Eliott_CV.html
@@ -32,7 +32,7 @@
           
           <p class="more-text"></p>
           <p class="less-text" style="display:none;">
-            At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren
+            Je m'appelle Eliott BREHIN, j'ai 18 ans et je suis actuellement étudiant en cybersécurité. Passionné par la sécurité informatique et les technologies, je m'efforce d'approfondir mes compétences et connaissances dans ce domaine en constante évolution. À la recherche d'un stage, mon objectif est d'acquérir une expérience concrète et de mettre en pratique les théories apprises pendant mes études. Je souhaite ainsi contribuer activement à des projets tout en développant mes compétences professionnelles dans la cybersécurité.
           </p>
         
           <script>
