--- a/CV/Eliott_CV.html
+++ b/CV/Eliott_CV.html
@@ -35,7 +35,7 @@
 
     
   </nav>
-  <section class="header"></section>
+  <section class="header">
 
     <div class="socials">
         <a href="https://github.com/BapeCode/Guardian"><i class="fa-brands fa-github"></i></a>
@@ -154,3 +154,4 @@
   </div>
 </body>
 </html>
+<script type="text/javascript" src="../scripts/addons.js"></script>
