--- a/CV/CV Mathieu.html
+++ b/CV/CV Mathieu.html
@@ -72,7 +72,7 @@
           
           <p class="more-text"></p>
           <p class="less-text" style="display:none;">
-            texte à introduire
+            Déterminé, sérieux, autonome et conscient des exigences du secteur, je suis convaincu que je serai un atout au sein de votre équipe. En tant qu'étudiant en première année de cybersécurité, j’ai développé des compétences solides en gestion des risques, protection des systèmes et détection des menaces. Ma rigueur et ma capacité d’adaptation me permettent de relever les défis techniques avec efficacité. Je suis motivé par l’idée de mettre mes compétences au service de vos objectifs et d’être un véritable moteur pour la réussite des missions qui me seront confiées.
           </p>
         
           <script>
