--- a/laboratory/login.html
+++ b/laboratory/login.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Guardian</title>
-    <link rel="stylesheet" href="style/animations.css">
-    <link rel="stylesheet" href="style/respensive.css">
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="../style/animations.css">
+    <link rel="stylesheet" href="../style/respensive.css">
+    <link rel="stylesheet" href="../style/style.css">
     <script src="https://kit.fontawesome.com/773700857c.js" crossorigin="anonymous"></script>
 </head>
 
@@ -97,5 +97,5 @@
     </footer> -->
 </body>
 
-<script type="text/javascript" src="scripts/addons.js"></script>
+<script type="text/javascript" src="../scripts/addons.js"></script>
 </html>
